[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samuel Eklund", email = "sam@eklundfamily.name" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
advent-of-code-2024 = "advent_of_code_2024:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
